# PolyBug

./: .gitignore  Buggy_Files.md  README.md  buggy_files.md  scraper.py  scraper_with_tests.py
Condition errors/: 3.php  4.ts  6.php  7.php  8.rs  9.dart
Condition errors/2/: random_image.cpp
Faulty index errors/: 10.js  2.py  3.py  4.py  5.py  7.py  8.py  9.py
api_misuse/c++/: Dockerfile  phy_configure_link  phy_configure_link.cpp  phy_get_link_state  phy_get_link_state.cpp
api_misuse/java/: pom.xml
api_misuse/python/: message_handler.py  read_file.py  test_message_handler.py  test_read_file.py
condition/: 1.ts  10.js  5.jl  Dockerfile_condition
condition/2/: CMakeLists.txt  main.cpp  random_image.h  test_main.cpp
deadlock_images/: README.md
deadlock_images/dapr/: Dockerfile
deadlock_images/gvisor/: Dockerfile
deadlock_images/memgraph/: Dockerfile
deadlock_images/rustdesk/: Dockerfile
faulty_index/: 1.py  6.js  Dockerfile_faulty
logic/: Dockerfile
logic/C/: bt_rpa_functions.c  bt_rpa_functions.h  test_6.c  test_rpa_bug
logic/C++/: test_1.cpp  test_program
logic/Java/: pom.xml
logic/JavaScript/: test_10.test.js  test_2.test.js
logic/Python/: isclose.py  test_5.py
logic_tests/: package.json
logic_tests/C/: test_6.c  test_runner
logic_tests/C#/: EnemySpawnerTests.csproj  test_4.cs
logic_tests/C++/: main  numValDigits.h  test_1.cpp
logic_tests/Java/: test_7.java
null_reference/: null_reference_dataset.json  run_json_dataset.py
race_condition/: Dockerfile1  Dockerfile2  runloop.go  utp_utils.go
type_tests/: Package.swift
(+102 files in other folders)
